deploy/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: app.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes
              servicePort: 443
